Made Slide load on FireFox and Corrected Z Index of ToC and Help

--- a/css/slide.css
+++ b/css/slide.css
@@ -14,12 +14,15 @@ body{
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
+    z-index:999;
 
 }
 
 
 .toc-shown{
     -webkit-transform:translate(200px,0px);
+    -moz-transform:translate(200px,0px);
+    -o-transform:translate(200px,0px);
     transform:translate(200px,0px);
 }
 
@@ -36,10 +39,13 @@ body{
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
+    z-index:999;
 }
 
 .help-shown{
     -webkit-transform:translate(-200px,0px);
+    -moz-transform:translate(-200px,0px);
+    -o-transform:translate(-200px,0px);
     transform:translate(-200px,0px);
 }
 .slide-controller{
